# LoArchive

./: .gitignore  README.md  build_backend.py  generate_icon.py  generate_loarchive_icons.py  generate_tauri_icons.py  login_info.example.py  login_info.py  package-lock.json  package.json  requirements.txt  web_app.py
.github/workflows/: release.yml
installer/: index.html  package.json
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
static/css/: style.css
static/js/: script.js
templates/: index.html
