[package]
name = "loarchive-installer"
version = "1.0.0"
description = "LoArchive 自定义安装程序"
authors = ["Yar1991-Translation"]
license = "MIT"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "2.1"
dirs = "5.0"
winreg = "0.52"

